Add post captions table and store
